--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,10 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$version_kotlin"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.1"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+
+    // Material Design for Navigation Drawer
+    implementation 'com.google.android.material:material:1.0.0'
 }
