--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,12 @@ dependencies {
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit: $version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
 
     //EasyPermissions
     implementation 'pub.devrel:easypermissions:3.0.0'
