--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
 
     // Material Design for Navigation Drawer
     implementation 'com.google.android.material:material:1.0.0'
+
+    // PhotoView
+    implementation 'com.github.chrisbanes:PhotoView:1.3.1'
+
 }
