--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         enabled = true
     }
     defaultConfig {
-        applicationId "com.example.jewelryclassification"
+        applicationId 'com.jamlabsai.SRJ'
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
